<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#169C91"

    tools:context=".MainActivity">

    <!-- App Title -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/japan_daisuki"
        android:text="@string/app_text"
        android:textColor="#FFFAFA"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/EmojiBar"
        android:layout_width="373dp"
        android:layout_height="90dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rectangle"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText">

        <TextView
            android:id="@+id/emoji1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="40sp" />

        <TextView
            android:id="@+id/plusSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:gravity="center"
            android:text="@string/plus_sign"
            android:textColor="#222"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/emoji2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="40sp" />

        <TextView
            android:id="@+id/animeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text=""
            android:textColor="#111"
            android:textSize="24sp"
            android:visibility="gone"
            android:fontFamily="@font/japan_daisuki"/>

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/EmojisGrid"
        android:layout_width="370dp"
        android:layout_height="399dp"
        android:layout_marginTop="44dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmojiBar"
        app:layout_constraintVertical_bias="0.0">

        <FrameLayout
            android:id="@+id/emojiBtn1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/japan_daisuki"
                android:gravity="center"
                android:text="@string/emoji1"
                android:textSize="50sp" />
        </FrameLayout>


        <FrameLayout
            android:id="@+id/emojiBtn2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji2"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji3"
                android:textSize="50sp" />
        </FrameLayout>

        <!-- Cell 4 -->
        <FrameLayout
            android:id="@+id/emojiBtn4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji4"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji5"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon6"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji6"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon7"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji7"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon8"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji8"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon9"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji9"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon10"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji10"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon11"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji11"
                android:textSize="50sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/emojiBtn12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/small_button"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1">

            <ImageView
                android:id="@+id/infoIcon12"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="top|start"
                android:layout_marginTop="3dp"
                android:layout_marginStart="3dp"
                android:contentDescription="@string/emoji_info_icon"
                android:src="@drawable/info" />

            <TextView
                android:id="@+id/emojiLabel12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/emoji12"
                android:textSize="50sp" />
        </FrameLayout>

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/ButtonGrid"
        android:layout_width="376dp"
        android:layout_height="65dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="335dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EmojisGrid"
        app:layout_constraintVertical_bias="0.669">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ClearButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/japan_daisuki"
            android:text="@string/clear"
            android:textColor="#000000"
            android:textSize="22sp"
            app:cornerRadius="8dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/MatchButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/japan_daisuki"
            android:text="@string/match"
            android:textColor="#000000"
            android:textSize="22sp"
            app:cornerRadius="8dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Infobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/japan_daisuki"
            android:text="@string/info"
            android:textColor="#000000"
            android:textSize="22sp"
            app:cornerRadius="8dp"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />
    </androidx.gridlayout.widget.GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
